# frame2act

./: README.md  pyproject.toml  rollout.py  train.py
idm/: __init__.py  dataset.py  metrics.py  models.py  preprocessing.py  video_models.py
