[project]
name = "idm"
version = "0.1.0"
description = "Inverse Dynamics Model for autonomous driving — predicts actions from consecutive frame pairs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "wandb>=0.15",
    "huggingface-hub>=0.16",
    "tqdm>=4.65",
    "modal>=1.4.0",
]
